// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Destructive story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--destructive"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> DestructiveDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--destructive"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> DestructiveLeftIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--destructive"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> FullWidth story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--full-width"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> IconButtonDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--icon"
  disabled=""
  tabindex="-1"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonIconOnly story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--icon"
  type="button"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonIconOnlySmall story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--sm clickable-style--icon"
  type="button"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonLeftIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--icon"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonLeftIconSmall story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--sm clickable-style--icon"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> IconButtonRightIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--icon"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> IconButtonRightIconSmall story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--sm clickable-style--icon"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> Link story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--link"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> LinkDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--link"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> LinkRightIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--link"
  type="button"
>
  Button
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      opens in a new tab
    </title>
    <use
      xlink:href="test-file-stub#open-in-new"
    />
  </svg>
</button>
`;

exports[`<Button /> Loading story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary eds-is-loading"
  disabled=""
  tabindex="-1"
  type="button"
>
  <svg
    class="icon clickable__icon-loading"
    fill="currentColor"
    height="1.5em"
    role="img"
    style="--icon-size: 1.5em;"
    width="1.5em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      loading
    </title>
    <use
      xlink:href="test-file-stub#spinner"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> Primary story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> PrimaryDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> PrimaryLeftIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> PrimaryMedium story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--md clickable-style--primary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> PrimaryRightIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> PrimarySmall story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--sm clickable-style--primary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> Secondary story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--secondary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--secondary"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryLeftIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--secondary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> SecondaryMedium story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--md clickable-style--secondary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> SecondaryRightIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--secondary"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> SecondarySmall story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--sm clickable-style--secondary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> StrongLink story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--link clickable-style--link-strong"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> StrongLinkDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--link clickable-style--link-strong"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> StrongLinkRightIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--link clickable-style--link-strong"
  type="button"
>
  Button
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      opens in a new tab
    </title>
    <use
      xlink:href="test-file-stub#open-in-new"
    />
  </svg>
</button>
`;

exports[`<Button /> Tertiary story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--tertiary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> TertiaryDisabled story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--tertiary"
  disabled=""
  tabindex="-1"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> TertiaryLeftIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--tertiary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Button
</button>
`;

exports[`<Button /> TertiaryMedium story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--md clickable-style--tertiary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> TertiaryRightIcon story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--tertiary"
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</button>
`;

exports[`<Button /> TertiarySmall story renders snapshot 1`] = `
<button
  class="clickable-style clickable-style--sm clickable-style--tertiary"
  type="button"
>
  Button
</button>
`;

exports[`<Button /> passes class names down properly 1`] = `
<button
  class="clickable-style exampleClassName clickable-style--lg clickable-style--primary"
  data-testid="example-class-name"
  type="button"
>
  Click
</button>
`;

exports[`<Button /> passes test ids down properly 1`] = `
<button
  class="clickable-style clickable-style--lg clickable-style--primary"
  data-testid="example-test-id"
  type="button"
>
  Click
</button>
`;
